Fix styles on mobile #2

--- a/src/asciimath-editor.css
+++ b/src/asciimath-editor.css
@@ -6,6 +6,8 @@
 #input {
     font-family: var(--mono-font);
     font-size: 1rem;
+    flex-grow: 1;
+    flex-shrink: 1;
 }
 #preview {
     margin: 1rem;
